Change Points to Point, Change Preferences to Preference, change Weight attribute name

--- a/src/main/webapp/i18n/en/global.json
+++ b/src/main/webapp/i18n/en/global.json
@@ -11,6 +11,8 @@
                 "weight": "Weight",
                 "bloodPressure": "BloodPressure",
                 "preferences": "Preferences",
+                "point": "Point",
+                "preference": "Preference",
                 "jhipster-needle-menu-add-entry": "JHipster will add additional entities here (do not translate!)"
             },
             "account": {
