--- a/src/main/webapp/i18n/en/global.json
+++ b/src/main/webapp/i18n/en/global.json
@@ -1,6 +1,6 @@
 {
     "global": {
-        "title": "21points",
+        "title": "21-Points Health",
         "browsehappy": "You are using an <strong>outdated</strong> browser. Please <a href=\"http://browsehappy.com/?locale=en\">upgrade your browser</a> to improve your experience.",
         "menu": {
             "home": "Home",
@@ -9,7 +9,7 @@
                 "main": "Entities",
                 "points": "Points",
                 "weight": "Weight",
-                "bloodPressure": "BloodPressure",
+                "bloodPressure": "Blood Pressure",
                 "preferences": "Preferences",
                 "point": "Point",
                 "preference": "Preference",
@@ -119,5 +119,5 @@
         "emailexists": "E-mail is already in use!",
         "idexists": "A new {{entityName}} cannot already have an ID"
     },
-    "footer": "This is your footer"
+    "footer": "<strong>21-Points Health</strong> | An application developed for a better life and <a href='http://www.jhipster-book.com' target='_blank'>The JHipster Mini-Book</a> | By <a href='http://raibledesigns.com' target='_blank'>Matt Raible</a>"
 }
