--- a/src/main/webapp/i18n/en/point.json
+++ b/src/main/webapp/i18n/en/point.json
@@ -2,23 +2,23 @@
     "21pointsApp": {
         "point" : {
             "home": {
-                "title": "Points",
-                "createLabel": "Create a new Point",
-                "createOrEditLabel": "Create or edit a Point"
+                "title": "Daily Points",
+                "createLabel": "Add Points",
+                "createOrEditLabel": "Add or Edit Points"
             },
-            "created": "A new Point is created with identifier {{ param }}",
-            "updated": "A Point is updated with identifier {{ param }}",
-            "deleted": "A Point is deleted with identifier {{ param }}",
+            "created": "Added Successfully!",
+            "updated": "Updated Successfully!",
+            "deleted": "Deleted Successfully!",
             "delete": {
-                "question": "Are you sure you want to delete Point {{ id }}?"
+                "question": "Are you sure you want to delete this?"
             },
             "detail": {
-                "title": "Point"
+                "title": "View Points"
             },
             "date": "Date",
-            "exercise": "Exercise",
-            "meals": "Meals",
-            "alcohol": "Alcohol",
+            "exercise": "Did you exercise?",
+            "meals": "Did you eat well?",
+            "alcohol": "Did you drink?",
             "notes": "Notes",
             "user": "User"
         }
