--- a/src/main/webapp/i18n/en/preference.json
+++ b/src/main/webapp/i18n/en/preference.json
@@ -3,14 +3,14 @@
         "preference" : {
             "home": {
                 "title": "Preferences",
-                "createLabel": "Create a new Preference",
+                "createLabel": "Create Preference",
                 "createOrEditLabel": "Create or edit a Preference"
             },
-            "created": "A new Preference is created with identifier {{ param }}",
-            "updated": "A Preference is updated with identifier {{ param }}",
-            "deleted": "A Preference is deleted with identifier {{ param }}",
+            "created": "Added Successfully!",
+            "updated": "Updated Successfully!",
+            "deleted": "Deleted Successfully!",
             "delete": {
-                "question": "Are you sure you want to delete Preference {{ id }}?"
+                "question": "Are you sure you want to delete this?"
             },
             "detail": {
                 "title": "Preference"
