--- a/src/main/webapp/i18n/en/point.json
+++ b/src/main/webapp/i18n/en/point.json
@@ -4,11 +4,11 @@
             "home": {
                 "title": "Daily Points",
                 "createLabel": "Add Points",
-                "createOrEditLabel": "Add or Edit Points"
+                "createOrEditLabel": "Edit Points"
             },
-            "created": "Added Successfully!",
-            "updated": "Updated Successfully!",
-            "deleted": "Deleted Successfully!",
+            "created": "Points added successfully.",
+            "updated": "Points updated successfully.",
+            "deleted": "Points deleted.",
             "delete": {
                 "question": "Are you sure you want to delete this?"
             },
@@ -18,9 +18,10 @@
             "date": "Date",
             "exercise": "Did you exercise?",
             "meals": "Did you eat well?",
-            "alcohol": "Did you drink?",
+            "alcohol": "Did you drink responsibly?",
             "notes": "Notes",
-            "user": "User"
+            "user": "User",
+            "actions": "Actions"
         }
     }
 }
