--- a/src/main/webapp/i18n/en/preference.json
+++ b/src/main/webapp/i18n/en/preference.json
@@ -3,20 +3,22 @@
         "preference" : {
             "home": {
                 "title": "Preferences",
-                "createLabel": "Create Preference",
-                "createOrEditLabel": "Create or edit a Preference"
+                "createLabel": "Add Preferences",
+                "createOrEditLabel": "Edit Preferences"
             },
-            "created": "Added Successfully!",
-            "updated": "Updated Successfully!",
-            "deleted": "Deleted Successfully!",
+            "created": "Added preferences successfully.",
+            "updated": "Updated preferences successfully.",
+            "deleted": "Preferences deleted.",
             "delete": {
                 "question": "Are you sure you want to delete this?"
             },
             "detail": {
-                "title": "Preference"
+                "title": "Preferences"
             },
-            "weeklyGoal": "WeeklyGoal",
-            "weightUnits": "WeightUnits"
+            "weeklyGoal": "Weekly Points Goal",
+            "weightUnits": "Weight Units",
+            "user": "user",
+            "actions": "Actions"
         }
     }
 }
