--- a/src/main/webapp/i18n/en/weight.json
+++ b/src/main/webapp/i18n/en/weight.json
@@ -2,22 +2,23 @@
     "21pointsApp": {
         "weight" : {
             "home": {
-                "title": "Weight-Ins",
+                "title": "Weigh-Ins",
                 "createLabel": "Add Weight",
-                "createOrEditLabel": "Add or edit your Weight"
+                "createOrEditLabel": "Edit your weight"
             },
-            "created": "Added Successfully!",
-            "updated": "Updated Successfully!",
-            "deleted": "Deleted Successfully!",
+            "created": "Weight added successfully.",
+            "updated": "Weight updated successfully.",
+            "deleted": "Weight deleted.",
             "delete": {
                 "question": "Are you sure you want to delete this?"
             },
             "detail": {
-                "title": "Your Weight"
+                "title": "View Weight"
             },
             "timestamp": "Date/Time",
             "weight": "Weight (lbs)",
-            "user": "User"
+            "user": "User",
+            "actions": "Actions"
         }
     }
 }
