--- a/src/main/webapp/i18n/fr/global.json
+++ b/src/main/webapp/i18n/fr/global.json
@@ -88,6 +88,7 @@
             "cancel": "Annuler",
             "edit": "Editer",
             "delete": "Supprimer",
+            "new": "Add",
             "save": "Sauvegarder",
             "view": "Voir"
         },
