--- a/src/main/webapp/i18n/en/main.json
+++ b/src/main/webapp/i18n/en/main.json
@@ -14,6 +14,10 @@
             "contact": "contact @java_hipster on Twitter"
         },
         "like": "If you like JHipster, don't forget to give us a star on",
-        "github": "Github"
+        "github": "Github",
+        "points": {
+            "thisWeek": "Points for the week of {{date}}:",
+            "thisWeekMobile": "Points:"
+        }
     }
 }
